MERGE: branche fixpushben into main
Squashed commit of the following:

commit 8ba1076457b9f716aa41a3bdecda56f492458890
Author: Benoit Savinel <bsavinel@student.42.fr>
Date:   Mon May 15 13:37:55 2023 +0200

    FIX: probleme friend

--- a/project/frontend/src/Pages/Home/friendPart/FriendPart.scss
+++ b/project/frontend/src/Pages/Home/friendPart/FriendPart.scss
@@ -109,6 +109,7 @@
 				transition-property: width, background-color;
 				box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.25), inset 0 1px rgba(255, 255, 255, 0.1);
 				background-color: #f21111;
+				color: #ffffff;
 			}
 		}
 	}
